--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".cityActivity">
+    tools:context=".CityActivity">
 
     <TextView
         android:id="@+id/abc"
@@ -19,4 +19,8 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <ListView
+        android:id="@+id/citylistview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></ListView>
 </android.support.constraint.ConstraintLayout>
