--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".WeatherActivity">
 
+    <TextView
+        android:id="@+id/wethertextview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </android.support.constraint.ConstraintLayout>
